unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/clazar__AzureCoSellOpportunity__c.object-meta.xml
<CustomObject>
    <label>Clazar Azure Co-Sell Opportunity</label>
    <nameField>
        <label>Referral Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clazar Azure Co-Sell Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>