unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__address__c.field-meta.xml
<CustomField>
    <fullName>clazar__address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>