unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__assistance_type__c.field-meta.xml
<CustomField>
    <fullName>clazar__assistance_type__c</fullName>
    <label>Assistance Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>