unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__city__c.field-meta.xml
<CustomField>
    <fullName>clazar__city__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>