unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__closing_date_time__c.field-meta.xml
<CustomField>
    <fullName>clazar__closing_date_time__c</fullName>
    <label>Estimated Close Date</label>
    <type>DateTime</type>
</CustomField>