unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__country__c.field-meta.xml
<CustomField>
    <fullName>clazar__country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>