unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__created_date_time__c.field-meta.xml
<CustomField>
    <fullName>clazar__created_date_time__c</fullName>
    <label>Created in Azure Date</label>
    <type>DateTime</type>
</CustomField>