unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__currency__c.field-meta.xml
<CustomField>
    <fullName>clazar__currency__c</fullName>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>