unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__customer_company_name__c.field-meta.xml
<CustomField>
    <fullName>clazar__customer_company_name__c</fullName>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>