unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__customer_website__c.field-meta.xml
<CustomField>
    <fullName>clazar__customer_website__c</fullName>
    <label>Customer Website</label>
    <type>Url</type>
</CustomField>