unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__deal_name__c.field-meta.xml
<CustomField>
    <fullName>clazar__deal_name__c</fullName>
    <label>Deal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>