unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__deal_value__c.field-meta.xml
<CustomField>
    <fullName>clazar__deal_value__c</fullName>
    <label>Estimated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>