unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__direction__c.field-meta.xml
<CustomField>
    <fullName>clazar__direction__c</fullName>
    <label>Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>