unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__is_macc_eligible__c.field-meta.xml
<CustomField>
    <fullName>clazar__is_macc_eligible__c</fullName>
    <label>MACC Eligibility</label>
    <length>120</length>
    <type>Text</type>
</CustomField>