unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__mapped_object__c.field-meta.xml
<CustomField>
    <fullName>clazar__mapped_object__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/&quot;+ clazar__mapped_object_type__c + &quot;/&quot; +  clazar__mapped_object_id__c + &quot;/view&quot;,  clazar__mapped_object_id__c ,&quot;_self&quot;)</formula>
    <label>Mapped Object</label>
    <type>Text</type>
</CustomField>