unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__microsoft_account_id__c.field-meta.xml
<CustomField>
    <fullName>clazar__microsoft_account_id__c</fullName>
    <label>Microsoft Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>