unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__notes__c.field-meta.xml
<CustomField>
    <fullName>clazar__notes__c</fullName>
    <label>Notes to Microsoft</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>