unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__sales_stage__c.field-meta.xml
<CustomField>
    <fullName>clazar__sales_stage__c</fullName>
    <label>Sales Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>