unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__shared_referral_metadata__c.field-meta.xml
<CustomField>
    <fullName>clazar__shared_referral_metadata__c</fullName>
    <label>Shared Referral Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>