unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__status_reason__c.field-meta.xml
<CustomField>
    <fullName>clazar__status_reason__c</fullName>
    <label>Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>