unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__sub_status__c.field-meta.xml
<CustomField>
    <fullName>clazar__sub_status__c</fullName>
    <label>Sub Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>