unpackaged/main/default/objects/clazar__AzureCoSellOpportunity__c/fields/clazar__target__c.field-meta.xml
<CustomField>
    <fullName>clazar__target__c</fullName>
    <label>Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>